# RBDL_a_mini_demo

./: CMakeLists.txt  README.md
include/: data_struct.hpp  robot_info.hpp
log/: latest_list
src/: CMakeLists.txt  main.cpp  robot_info.cpp
urdf/: ur5_robot.urdf
